# min-ed-launcher

./: .gitignore  .gitnuke  CHANGELOG.md  Cargo.toml  EdLauncher.sln  LICENSE  MinEdLauncher.sln  README.md  build.rs  global.json  publish.ps1  publish.sh
.github/ISSUE_TEMPLATE/: bug-error-report.md
.github/workflows/: ci.yaml  release.yaml
ci/: archive-job-log.sh  checksums.sh  create-job-outputs.sh  latest-changes.sh  release-notes.sh
resources/: min-ed-launcher.desktop
src/: Api.fs  Directory.Build.props  Directory.Packages.props  EdLauncher.fsproj  Epic.fs  EventLog.fs  Extensions.fs  FileIO.fs  Interop.fs  Log.fs  MachineId.fs  Product.fs  Program.fs  Server.fs  Settings.fs  Steam.fs  Types.fs  settings.json
src/EdLauncher/: Api.fs  App.fs  Cobra.fs  EdLauncher.fsproj  Epic.fs  EventLog.fs  Extensions.fs  Interop.fs  Log.fs  MachineId.fs  Process.fs  Product.fs  Program.fs  Settings.fs  Steam.fs  Token.fs  Types.fs
src/EdLauncher.Bootstrap/: EdLauncher.Bootstrap.csproj  Program.cs
src/MinEdLauncher/: Api.fs  App.fs  AuthorizedProduct.fs  Cobra.fs  Console.fs  Epic.fs  Extensions.fs  Github.fs  Http.fs  Interop.fs  Legendary.fs  Log.fs  MachineId.fs  MinEdLauncher.fsproj  Process.fs  Product.fs  Program.fs  Settings.fs  Steam.fs  Token.fs  Types.fs  settings.json  (+1 more)
src/MinEdLauncher.Bootstrap/: MinEdLauncher.Bootstrap.csproj  Program.cs
tests/: AuthorizedProduct.fs  Cobra.fs  EdLauncher.Tests.fsproj  EdLauncher.fs  EventLog.fs  Extensions.fs  Github.fs  Legendary.fs  MachineId.fs  Main.fs  MinEdLauncher.Tests.fsproj  Process.fs  Product.fs  Settings.fs
(+1 files in other folders)
