[package]
name = "minedlauncher-bootstrap"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/bootstrapper-rs/main.rs"

[dependencies]
windows = { version = "0.42", features = [ "Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging" ] }

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "MinEdLauncher.Bootstrap"
FileDescription = "Launches MinEdLauncher. Used in conjunction with the Epic platform."

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
